--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "rn-emoji-keyboard": "^1.7.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.5"
   },
